# DomainLens

./: Cargo.toml
benches/: domain_rule_bench.rs  readme.md
examples/: dns_demo.rs  memory_usage.rs
src/: lib.rs
src/dns/: mod.rs  server.rs
src/domain/: matcher.rs  mod.rs
