[package]
name = "domainlens"
version = "0.1.0"
edition = "2024"

[dependencies]
cedarwood = { version = "0.4.6" }
tokio = { version = "1.49.0", features = ["full"] }
hickory-server = "0.25.2"
hickory-proto  = "0.25.2"
async-trait = "0.1.89"
tokio-util = "0.7.18"

[dev-dependencies]
criterion = "0.8.1"
sysinfo = "0.38.0"

[[bench]]
name = "domain_rule_bench"
harness = false